tests/valid/lifetime/hrt_bound_satisfied.facet
fn call_bound<'x, 'y>(
    r: unrestricted &'x unrestricted isize,
    s: unrestricted &'y unrestricted isize,
    f: unrestricted for<'a, 'b> fn(unrestricted &'a unrestricted isize, unrestricted &'b unrestricted isize) -> unrestricted &'b unrestricted isize where 'a: 'b
) -> unrestricted &'y unrestricted isize where 'x: 'y {
    (f r s)
}
